# bazel-docker

./: .env  .gitignore  BUILD.bazel  Dockerfile  Dockerfile_debian  Dockerfile_ubuntu  README.md  WORKSPACE  docker-compose.yaml  entrypoint.sh  init  versionpush.sh
.github/workflows/: push.yaml
